--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         <img src="images/pastor.jpg" alt="Lead Pastor" class="leader-photo" />
         <div>
           <h3>Pastor Daniel Usoro</h3>
-          <p style="text-align: justify; line-height: 1.5rem;">Pastor Daniel Usoro is the founder and lead shepherd of Apostles of the Word and Prayer Worldwide. With over 20 years of ministry experience, he is committed to teaching the truth, equipping leaders, and igniting prayer fire across generations.</p>
+          <p style="text-align: justify; line-height: 1.5rem;">Pastor Daniel Usoro is the founder and lead shepherd of Apostles of the Word and Prayer Worldwide.</p>
         </div>
       </div>
     </section>
