--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
   <div class="main-content">
   <!-- About Section -->
   <main class="about-section container" style="padding: 1.5rem 0;">
-    <img src="../images/about-photo.png" alt="About photo" width="100%">
+    <img src="images/about-photo.png" alt="About photo" width="100%">
     
     <section class="about-intro" style="padding: 1.5rem 0;">
       <h1>About Our Church</h1>
