--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
   <meta name="author" content="Apostles of the Word and Prayer Worldwide">
 
   <!-- Favicon (optional but recommended) -->
-  <link rel="icon" href="images/awp-logo.svg" type="image/x-icon">
+  <link rel="icon" href="images/awp-logo.svg" type="svg">
 
   <!-- Open Graph Meta (for better social media sharing) -->
   <meta property="og:title" content="Apostles of the Word and Prayer Worldwide">
   <meta property="og:description" content="A fellowship where Christ is exalted, ministry training is prioritized, and prayer is a responsibility.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://your-church-website.com">
-  <meta property="og:image" content="https://your-church-website.com/path/to/thumbnail-image.jpg">
+  <meta property="og:url" content="https://nathy-dev.github.io/awp-media/">
+  <meta property="og:image" content="https://nathy-dev.github.io/awp-media/images/awp-logo.svg">
 
   <!-- Twitter Card Meta -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Apostles of the Word and Prayer Worldwide">
   <meta name="twitter:description" content="A fellowship where Christ is exalted, ministry training is prioritized, and prayer is a responsibility.">
-  <meta name="twitter:image" content="https://your-church-website.com/path/to/thumbnail-image.jpg">
+  <meta name="twitter:image" content="https://nathy-dev.github.io/awp-media/images/awp-logo.svg">
 
   <!-- Theme Color (for mobile browser color) -->
   <meta name="theme-color" content="#0A192F">
