--- a/about.html
+++ b/about.html
@@ -37,12 +37,12 @@
     
     <section class="about-intro" style="padding: 1.5rem 0;">
       <h1>About Our Church</h1>
-      <p style="text-align: justify; line-height: 1.5rem;">Welcome to Apostles of the Word and Prayer Worldwide. We are a fellowship of believers in Christ alone, built upon the Gospel—everything Christ has done, His person, and His present ministry for the saints. We are a New Testament-patterned local assembly where the training of believers for ministry, with a strong emphasis on evangelism and teaching, is given top priority. Prayer is not reserved for a department; every believer is taught to acknowledge, receive, and minister prayer as a personal responsibility, making us truly a house of prayer. Reaching the unsaved is not an occasional effort—it is our daily lifestyle, our norm and culture. Every member, including pastors, serves as a volunteer; while we acknowledge the biblical right to support ministers, we have chosen to waive this for all. Though we are professionals in various fields, the daily work of the ministry and care for souls takes precedence. Needs are met among us through full expressions of the Spirit, and we boldly affirm that the gifts of the Spirit are in active demonstration in our midst.</p>
+      <p style="text-align: left; line-height: 1.5rem;">Welcome to Apostles of the Word and Prayer Worldwide. We are a fellowship of believers in Christ alone, built upon the Gospel—everything Christ has done, His person, and His present ministry for the saints. We are a New Testament-patterned local assembly where the training of believers for ministry, with a strong emphasis on evangelism and teaching, is given top priority. Prayer is not reserved for a department; every believer is taught to acknowledge, receive, and minister prayer as a personal responsibility, making us truly a house of prayer. Reaching the unsaved is not an occasional effort—it is our daily lifestyle, our norm and culture. Every member, including pastors, serves as a volunteer; while we acknowledge the biblical right to support ministers, we have chosen to waive this for all. Though we are professionals in various fields, the daily work of the ministry and care for souls takes precedence. Needs are met among us through full expressions of the Spirit, and we boldly affirm that the gifts of the Spirit are in active demonstration in our midst.</p>
     </section>
 
     <section class="about-mission">
       <h2>Our Mission & Vision</h2>
-      <p style="text-align: justify; line-height: 1.5rem;">To train men all over the world to become students of the Word and
+      <p style="text-align: left; line-height: 1.5rem;">To train men all over the world to become students of the Word and
       warriors in Prayer.</p>
     </section>
 
@@ -52,7 +52,7 @@
         <img src="images/pastor.jpg" alt="Lead Pastor" class="leader-photo" />
         <div>
           <h3>Pastor Daniel Usoro</h3>
-          <p style="text-align: justify; line-height: 1.5rem;">Pastor Daniel Usoro is the founder and lead shepherd of Apostles of the Word and Prayer Worldwide.</p>
+          <p style="text-align: left; line-height: 1.5rem;">Pastor Daniel Usoro is the founder and lead shepherd of Apostles of the Word and Prayer Worldwide.</p>
         </div>
       </div>
     </section>
