--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   </a>
 </div>
     
-    <div class="sermon-card hidden">
+    <div class="sermon-card">
       <a href="template/sermons.html?id=" target="_blank">
         <img src="images/listenToJesus.jpg" alt="I Listen To Jesus" width="100%">
         <h3 class="sermon-title hidden">I Listen To Jesus</h3>
