--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <meta property="og:title" content="Apostles of the Word and Prayer Worldwide">
   <meta property="og:description" content="A fellowship where Christ is exalted, ministry training is prioritized, and prayer is a responsibility.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://your-church-website.com">
-  <meta property="og:image" content="https://your-church-website.com/path/to/thumbnail-image.jpg">
+  <meta property="og:url" content="https://awpwmedia.org">
+  <meta property="og:image" content="https://awpwmedia.org/images/thumbnail.png">
 
   <!-- Twitter Card Meta -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Apostles of the Word and Prayer Worldwide">
   <meta name="twitter:description" content="A fellowship where Christ is exalted, ministry training is prioritized, and prayer is a responsibility.">
-  <meta name="twitter:image" content="https://your-church-website.com/path/to/thumbnail-image.jpg">
+  <meta name="twitter:image" content="https://awpwmedia.org/images/thumbnail.png">
 
   <!-- Theme Color (for mobile browser color) -->
   <meta name="theme-color" content="#0A192F">
