--- a/foundation.html
+++ b/foundation.html
@@ -96,7 +96,39 @@
       <a href="template/sermons.html?id=christ-in-me" target="_blank">
         <img src="images/christInMe.jpg" alt="Christ in me" width="100%">
         <h3 class="sermon-title hidden">Christ In Me</h3>
-      <p class="sermon-meta hidden">2022</p>
+      <p class="sermon-meta hidden"></p>
+      </a>
+    </div>
+     
+     <div class="sermon-card">
+      <a href="template/sermons.html?id=christ-and-church" target="_blank">
+        <img src="images/christ&church.jpg" alt="hint on christ and the church" width="100%">
+        <h3 class="sermon-title hidden">Hint on Christ and the Church</h3>
+      <p class="sermon-meta hidden"></p>
+      </a>
+    </div>
+     
+     <div class="sermon-card">
+      <a href="template/sermons.html?id=unbelief-as-sin" target="_blank">
+        <img src="images/unbeliefAsSin.jpg" alt="unbelief as sin" width="100%">
+        <h3 class="sermon-title hidden">Unbelief As Sin</h3>
+      <p class="sermon-meta hidden"></p>
+      </a>
+    </div>
+
+     <div class="sermon-card">
+      <a href="template/sermons.html?id=be-filled" target="_blank">
+        <img src="images/beFilled.jpg" alt="be filled" width="100%">
+        <h3 class="sermon-title hidden">Be Filled (Where is God?)</h3>
+      <p class="sermon-meta hidden"></p>
+      </a>
+    </div>
+
+     <div class="sermon-card">
+      <a href="template/sermons.html?id=service-to-god" target="_blank">
+        <img src="images/serviceToGod.jpg" alt="our service to the lord" width="100%">
+        <h3 class="sermon-title hidden">Our Service To The Lord</h3>
+      <p class="sermon-meta hidden"></p>
       </a>
     </div>
   </div>
