--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+     <!-- Basic Meta -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <title>Apostles of the Word and Prayer Worldwide</title>
+  <meta name="description" content="Apostles of the Word and Prayer Worldwide - A fellowship of believers in Christ alone. Teaching, evangelism, prayer, and full demonstration of the Spirit are our focus.">
+
+  <meta name="author" content="Apostles of the Word and Prayer Worldwide">
+
+  <!-- Favicon (optional but recommended) -->
+  <link rel="icon" href="images/awp-logo.svg" type="image/x-icon">
+
+  <!-- Open Graph Meta (for better social media sharing) -->
+  <meta property="og:title" content="Apostles of the Word and Prayer Worldwide">
+  <meta property="og:description" content="A fellowship where Christ is exalted, ministry training is prioritized, and prayer is a responsibility.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://awpwmedia.org">
+  <meta property="og:image" content="https://awpwmedia.org/images/thumbnail.png">
+
+  <!-- Twitter Card Meta -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Apostles of the Word and Prayer Worldwide">
+  <meta name="twitter:description" content="A fellowship where Christ is exalted, ministry training is prioritized, and prayer is a responsibility.">
+  <meta name="twitter:image" content="https://awpwmedia.org/images/thumbnail.png">
+
+  <!-- Theme Color (for mobile browser color) -->
+  <meta name="theme-color" content="#0A192F">
+
+  <!-- Robots (Optional: tells search engines what to do) -->
+  <meta name="robots" content="index, follow">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Apostles of the Word and Prayer Worldwide</title>
