--- a/workers.html
+++ b/workers.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
    <!-- Basic Meta -->
+  <   <!-- Basic Meta -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,14 +19,14 @@
   <meta property="og:title" content="Apostles of the Word and Prayer Worldwide">
   <meta property="og:description" content="A fellowship where Christ is exalted, ministry training is prioritized, and prayer is a responsibility.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://your-church-website.com">
-  <meta property="og:image" content="https://your-church-website.com/path/to/thumbnail-image.jpg">
+  <meta property="og:url" content="https://awpwmedia.org">
+  <meta property="og:image" content="https://awpwmedia.org/images/thumbnail.png">
 
   <!-- Twitter Card Meta -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Apostles of the Word and Prayer Worldwide">
   <meta name="twitter:description" content="A fellowship where Christ is exalted, ministry training is prioritized, and prayer is a responsibility.">
-  <meta name="twitter:image" content="https://your-church-website.com/path/to/thumbnail-image.jpg">
+  <meta name="twitter:image" content="https://awpwmedia.org/images/thumbnail.png">
 
   <!-- Theme Color (for mobile browser color) -->
   <meta name="theme-color" content="#0A192F">
@@ -138,7 +139,12 @@
         <div class="footer-contact">
           <h4>Contact Us</h4>
           <p><a href="mailTo:awpw.media@gmail.com">Email: awpw.media@gmail.com</a></p>
-          <p><a href="tel:+234-810-320-2541">Phone: +234-810-320-2541</a></p>
+          <p>
+            <a href="tel:0813 506 1115">Phone: 08135061115,</a>
+            <a href="tel:0818 172 3009"> 08181723009,</a>
+            <a href="tel:0902 840 2356"> 09028402356,</a>
+            <a href="tel:0813 003 8201"> 08130038201</a>
+          </p>
           <p>Address: Pipeline, Rumuokwurusi, Portharcourt, Nigeria</p>
         </div>
       </div>
