--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </div>
     
     <div class="sermon-card hidden">
-      <a href="template/sermons.html?id=">
+      <a href="template/sermons.html?id=clarity-on-spiritual-growth">
         <img src="images/claritySpiritualGrowth.jpg" alt="Clarity on Spiritual Growth (Workers Retreat)" width="100%">
         <h3 class="sermon-title hidden">Clarity on Spiritual Growth (Workers Retreat)</h3>
       <p class="sermon-meta hidden"></p>
@@ -170,7 +170,7 @@
     </div>
     
     <div class="sermon-card hidden">
-      <a href="template/sermons.html?id=">
+      <a href="template/sermons.html?id=ministry-and-my-ambition">
         <img src="images/ministry-ambition.jpg" alt="Ministry and my Ambition" width="100%">
         <h3 class="sermon-title hidden">Ministry and my Ambition</h3>
       <p class="sermon-meta hidden"></p>
