--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   </a>
 </div>
     
-    <div class="sermon-card">
+    <div class="sermon-card hidden">
       <a href="template/sermons.html?id=discipleship">
         <img src="images/disciple.jpeg" alt="Discipleship" width="100%">
         <h3 class="sermon-title hidden">Discipleship</h3>
