--- a/discipleship.html
+++ b/discipleship.html
@@ -92,6 +92,30 @@
       </a>
     </div>
 
+     <div class="sermon-card">
+      <a href="template/sermons.html?id=obedience-in-ministry">
+        <img src="images/obedience.jpeg" alt="Obedience in Ministry" width="100%">
+        <h3 class="sermon-title hidden">Obedience in Ministry</h3>
+      <p class="sermon-meta hidden">2022</p>
+      </a>
+    </div>
+    
+    <div class="sermon-card">
+      <a href="template/sermons.html?id=clarity-on-spiritual-growth">
+        <img src="images/claritySpiritualGrowth.jpg" alt="Clarity on Spiritual Growth (Workers Retreat)" width="100%">
+        <h3 class="sermon-title hidden">Clarity on Spiritual Growth (Workers Retreat)</h3>
+      <p class="sermon-meta hidden"></p>
+      </a>
+    </div>
+    
+    <div class="sermon-card">
+      <a href="template/sermons.html?id=ministry-and-my-ambition">
+        <img src="images/ministry-ambition.jpg" alt="Ministry and my Ambition" width="100%">
+        <h3 class="sermon-title hidden">Ministry and my Ambition</h3>
+      <p class="sermon-meta hidden"></p>
+      </a>
+    </div>
+
   </div>
 </main>
  
