--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 </div>
     
     <div class="sermon-card">
-      <a href="template/sermons.html?id=">
+      <a href="template/sermons.html?id=i-listen-to-jesus">
         <img src="images/listenToJesus.jpg" alt="I Listen To Jesus" width="100%">
         <h3 class="sermon-title hidden">I Listen To Jesus</h3>
       <p class="sermon-meta hidden"></p>
