--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
      
    <div class="sermon-card">
      <a href="template/sermons.html?id=abraham-blessing">
-       <img src="images/abrahamBlessing.jpg" alt="Abraham's Blessing" width="100%">
+       <img src="images/AbrahamBlessing.jpg" alt="Abraham's Blessing" width="100%">
        <h3 class="sermon-title hidden">Abraham's Blessing</h3>
      <p class="sermon-meta hidden"></p>
      </a>
