--- a/index.html
+++ b/index.html
@@ -163,6 +163,14 @@
      <p class="sermon-meta hidden"></p>
      </a>
    </div>
+     
+   <div class="sermon-card hidden">
+     <a href="template/sermons.html?id=a-better-covenant">
+       <img src="images/betterCovenant.jpg" alt="A Better Covenant" width="100%">
+       <h3 class="sermon-title hidden">A Better Covenant</h3>
+     <p class="sermon-meta hidden"></p>
+     </a>
+   </div>
     
     <div class="sermon-card">
       <a href="template/sermons.html?id=i-listen-to-jesus">
