--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
      </a>
    </div>
      
-   <div class="sermon-card hidden">
+   <div class="sermon-card">
      <a href="template/sermons.html?id=a-better-covenant">
        <img src="images/betterCovenant.jpg" alt="A Better Covenant" width="100%">
        <h3 class="sermon-title hidden">A Better Covenant</h3>
