--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
     
     <div class="sermon-card">
       <a href="template/sermons.html?id=spirit-in-you">
-        <img src="images/theSpiritInYou.jpg" alt="The Spirit in you" width="100%">
-        <h3 class="sermon-title hidden">The spirit in you</h3>
+        <img src="images/theSpiritInYou.jpg" alt="The Spirit In you" width="100%">
+        <h3 class="sermon-title hidden">The spirit In you</h3>
       <p class="sermon-meta hidden"></p>
       </a>
     </div>
