--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     </div>
     
     <div class="sermon-card">
-      <a href="template/sermons.html?id=">
+      <a href="template/sermons.html?id=dealing-with-my-enemies">
         <img src="images/DealWithEnemy.jpg" alt="Dealing With My Enemies" width="100%">
         <h3 class="sermon-title hidden">Dealing With My Enemies</h3>
       <p class="sermon-meta hidden"></p>
