--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
       </a>
     </div>
      
-    <div class="sermon-card">
+    <div class="sermon-card hidden">
       <a href="template/sermons.html?id=">
         <img src="images/flesh-spirit.jpg" alt="the flesh of the spirit" width="100%">
         <h3 class="sermon-title hidden">Is this the flesh of the spirit</h3>
@@ -252,7 +252,7 @@
       </a>
     </div>
     
-    <div class="sermon-card">
+    <div class="sermon-card hidden">
       <a href="template/sermons.html?id=">
         <img src="images/reconcile.jpg" alt="Reconciliation" width="100%">
         <h3 class="sermon-title hidden">Reconciliation</h3>
