--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@
     </div>
      
     <div class="sermon-card">
-      <a href="template/sermons.html?id=prevailing-in-prayer">
-        <img src="images/prevailingInPrayer.jpg" alt="Prevailing in Prayer" width="100%">
-        <h3 class="sermon-title hidden">Prevailing in Prayer - PAM Summit 2023 Day 2</h3>
+      <a href="template/sermons.html?id=prevailing-in-prayers">
+        <img src="images/prevailingInPrayer.jpg" alt="Prevailing in Prayers" width="100%">
+        <h3 class="sermon-title hidden">Prevailing in Prayers - PAM Summit 2023 Day 2</h3>
       <p class="sermon-meta hidden">2023</p>
       </a>
     </div>
