--- a/index.html
+++ b/index.html
@@ -203,6 +203,14 @@
       <p class="sermon-meta hidden"></p>
       </a>
     </div>
+
+   <div class="sermon-card">
+     <a href="template/sermons.html?id=the-baptism">
+       <img src="images/theBaptism.jpg" alt="The Baptism" width="100%">
+       <h3 class="sermon-title hidden">The Baptism</h3>
+     <p class="sermon-meta hidden">2025</p>
+     </a>
+   </div>
      
     <div class="sermon-card">
       <a href="template/sermons.html?id=gist-on-heaven">
@@ -315,6 +323,14 @@
       <p class="sermon-meta hidden">2025</p>
       </a>
     </div>
+
+   <div class="sermon-card">
+     <a href="template/sermons.html?id=divine-love">
+       <img src="images/divineLove.jpg" alt="Divine Love" width="100%">
+       <h3 class="sermon-title hidden">Divine Love</h3>
+     <p class="sermon-meta hidden">2024</p>
+     </a>
+   </div>
      
     <div class="sermon-card">
       <a href="template/sermons.html?id=count-the-cost">
