--- a/workers.html
+++ b/workers.html
@@ -101,6 +101,30 @@
      <p class="sermon-meta hidden">2024</p>
      </a>
    </div>
+
+     <div class="sermon-card">
+      <a href="template/sermons.html?id=clarity-on-spiritual-growth">
+        <img src="images/claritySpiritualGrowth.jpg" alt="Clarity on Spiritual Growth (Workers Retreat)" width="100%">
+        <h3 class="sermon-title hidden">Clarity on Spiritual Growth (Workers Retreat)</h3>
+      <p class="sermon-meta hidden"></p>
+      </a>
+    </div>
+
+     <div class="sermon-card">
+      <a href="template/sermons.html?id=ready-for-war">
+        <img src="images/readyForWar.jpg" alt="Ready For War - Fan The Flame (Workers Retreat 2020, Day 3)" width="100%">
+        <h3 class="sermon-title hidden">Ready For War - Fan The Flame (Workers Retreat 2020, Day 3)</h3>
+      <p class="sermon-meta hidden">2020</p>
+      </a>
+    </div>
+     
+     <div class="sermon-card">
+      <a href="template/sermons.html?id=what-the-gospel-entails">
+        <img src="images/gospelEntails.jpg" alt="What The Gospel Entails" width="100%">
+        <h3 class="sermon-title hidden">What The Gospel Entails</h3>
+      <p class="sermon-meta hidden">2020</p>
+      </a>
+    </div>
      
   </div>
 </main>
