--- a/index.html
+++ b/index.html
@@ -172,6 +172,22 @@
      </a>
    </div>
 
+     <div class="sermon-card hidden">
+      <a href="template/sermons.html?id=ready-for-war">
+        <img src="images/readyForWar.jpg" alt="Ready For War - Fan The Flame (Workers Retreat 2020, Day 3)" width="100%">
+        <h3 class="sermon-title hidden">Ready For War - Fan The Flame (Workers Retreat 2020, Day 3)</h3>
+      <p class="sermon-meta hidden">2020</p>
+      </a>
+    </div>
+     
+     <div class="sermon-card hidden">
+      <a href="template/sermons.html?id=what-the-gospel-entails">
+        <img src="images/gospelEntails.jpg" alt="What The Gospel Entails" width="100%">
+        <h3 class="sermon-title hidden">What The Gospel Entails</h3>
+      <p class="sermon-meta hidden">2020</p>
+      </a>
+    </div>
+
    <div class="sermon-card hidden">
      <a href="template/sermons.html?id=god-of-justice">
        <img src="images/godOfJustice.jpg" alt="God of Justice" width="100%">
