--- a/index.html
+++ b/index.html
@@ -411,6 +411,14 @@
       <p class="sermon-meta hidden">2024</p>
       </a>
     </div>
+     
+    <div class="sermon-card">
+      <a href="template/sermons.html?id=reward-material-riches">
+        <img src="images/rewardMaterialRiches.jpg" alt="Reward and Material Riches" width="100%">
+        <h3 class="sermon-title hidden">Reward and Material Riches</h3>
+      <p class="sermon-meta hidden"></p>
+      </a>
+    </div>
 
      <div class="sermon-card hidden">
       <a href="template/sermons.html?id=christ-and-church">
