--- a/live.html
+++ b/live.html
@@ -99,6 +99,15 @@
         WAT</p>
       </div>
     </div>
+    <div class="live-container">
+      <div class="telegram-box" style="background-color: white;">
+        <i class="fab fa-instagram fa-3x" style="background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);"></i>
+        <p>Click the button below to join our live service on Instagram.</p>
+        <a href="https://www.instagram.com/apostlesofprayer?igsh=ZTUxcXczc3g2cXE2" target="_blank" class="live-button">Join Live Now</a>
+        <p class="note">Live every Sunday at 9:00 AM WAT & Thursday at 5:30 pm
+        WAT</p>
+      </div>
+    </div>
   </main>
   
   <hr>
