--- a/workers.html
+++ b/workers.html
@@ -85,6 +85,14 @@
 
 
   <div class="sermon-list" id="sermonList">
+
+     <div class="sermon-card">
+      <a href="template/sermons.html?id=the-developing-minister">
+        <img src="images/developingMinister.jpeg" alt="The Developing Minister" width="100%">
+        <h3 class="sermon-title hidden">The Developing Minister</h3>
+      <p class="sermon-meta hidden">2024</p>
+      </a>
+    </div>
      
    <div class="sermon-card">
      <a href="template/sermons.html?id=should-follow-men">
