--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
      
     <div class="sermon-card hidden">
       <a href="template/sermons.html?id=the-developing-minister">
-        <img src="images/developingMinister.jpeg" alt="The Developing Minister" width="100%">
+        <img src="images/developingMinister.jpg" alt="The Developing Minister" width="100%">
         <h3 class="sermon-title hidden">The Developing Minister</h3>
       <p class="sermon-meta hidden">2024</p>
       </a>
