--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
       <p class="sermon-meta hidden">2020</p>
       </a>
     </div>
+         </div>
      
      <div class="sermon-card hidden">
       <a href="template/sermons.html?id=what-the-gospel-entails">
@@ -230,7 +231,7 @@
      
     <div class="sermon-card">
       <a href="template/sermons.html?id=why-are-your-signs-hidden">
-        <img src="images1/signsHidden.jpg" alt="Why Are Your Signs Hidden" width="100%">
+        <img src="images/SignsHidden.jpg" alt="Why Are Your Signs Hidden" width="100%%">
         <h3 class="sermon-title hidden">Why Are Your Signs Hidden</h3>
       <p class="sermon-meta hidden">2025</p>
       </a>
