--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
      
     <div class="sermon-card">
       <a href="template/sermons.html?id=why-are-your-signs-hidden">
-        <img src="images/SignsHidden.jpg" alt="Why Are Your Signs Hidden" width="100%%">
+        <img src="images/SignsHidden.jpg" alt="Why Are Your Signs Hidden" width="100%">
         <h3 class="sermon-title hidden">Why Are Your Signs Hidden</h3>
       <p class="sermon-meta hidden">2025</p>
       </a>
