--- a/discipleship.html
+++ b/discipleship.html
@@ -107,6 +107,14 @@
       <p class="sermon-meta hidden">2024</p>
       </a>
     </div>
+
+     <div class="sermon-card">
+      <a href="template/sermons.html?id=order-in-ministry">
+        <img src="images/orderInMinistry.jpg" alt="Order In Ministry" width="100%">
+        <h3 class="sermon-title hidden">Order In Ministry</h3>
+      <p class="sermon-meta hidden">2023</p>
+      </a>
+    </div>
      
     <div class="sermon-card">
       <a href="template/sermons.html?id=consecrated-man">
