--- a/index.html
+++ b/index.html
@@ -542,6 +542,12 @@
      </div>
   </div>
 </main>
+
+ <div class="breadCrumbs-nav">
+    <div><a href="index.html" class="breadCrumbs">1</a></div>
+    <p>&gt;</p>
+    <div><a href="nextpage.html" class="breadCrumbs">2</a></div>
+ </div>
  
   
   <footer class="site-footer">
