--- a/nextpage.html
+++ b/nextpage.html
@@ -82,36 +82,14 @@
   <p class="intro">Listen and download spirit-filled messages to uplift your faith.</p>
 
   <!-- Search Input -->
-  <input
+<!--   <input
     type="text"
     id="searchInput"
     placeholder="Search by title or year..."
     onkeyup="filterSermons()"
     class="search-box"
-  />
+  /> -->
   
-  <div class="folders">
-  <div class="folder">
-    <a href="foundation.html">
-    <p>Foundation School Messages</p>
-    <i class="fa-solid fa-folder"></i>
-    </a>
-  </div>
-  <div class="folder">
-    <a href="discipleship.html">
-    <p>Discipleship Teachings</p>
-    <i class="fa-solid fa-folder"></i>
-    </a>
-  </div>
-  <div class="folder">
-    <a href="workers.html">
-    <p>Workers Teachings</p>
-    <i class="fa-solid fa-folder"></i>
-    </a>
-  </div>
-  </div>
-
-     <br>
 
   <div class="sermon-list" id="sermonList">
      
@@ -150,7 +128,7 @@
     <div><a href="nextpage.html" class="breadCrumbs">2</a></div>
  </div>
  
-  
+  <br>
   <footer class="site-footer">
     <div class="container">
       <div class="footer-container">
