Update and rename nextpage.html to more-sermons2.html

--- a/more-sermons2.html
+++ b/more-sermons2.html
@@ -181,6 +181,14 @@
       <p class="sermon-meta hidden">2022</p>
       </a>
     </div>
+     
+    <div class="sermon-card">
+      <a href="template/sermons.html?id=mystery-angels-demons-two">
+        <img src="images/angelsDemons2.jpg" alt="Unveiling the mystery on Angels & Demons - series 2" width="100%">
+        <h3 class="sermon-title hidden">Unveiling the mystery on Angels & Demons</h3>
+      <p class="sermon-meta hidden">2022</p>
+      </a>
+    </div>
     
 
   </div>
