--- a/index.html
+++ b/index.html
@@ -541,13 +541,19 @@
       <p class="sermon-meta hidden"></p>
       </a>
      </div>
-  </div>
+
+     <div class="sermon-card hidden">
+      <a href="template/sermons.html?id=mystery-angels-demons-two">
+        <img src="images/angelsDemons2.jpg" alt="Unveiling the mystery on Angels & Demons - series 2" width="100%">
+        <h3 class="sermon-title hidden">Unveiling the mystery on Angels & Demons</h3>
+      <p class="sermon-meta hidden">2022</p>
+     </div>
 </main>
 
  <div class="breadCrumbs-nav">
     <div><a href="https://awpwmedia.org" class="breadCrumbs">1</a></div>
     <p>&gt;</p>
-    <div><a href="nextpage.html" class="breadCrumbs">2</a></div>
+    <div><a href="more-sermons2.html" class="breadCrumbs">2</a></div>
  </div>
  
   <br>
