--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
  <div class="breadCrumbs-nav">
     <div><a href="https://awpwmedia.org" class="breadCrumbs">1</a></div>
     <p>&gt;</p>
-    <div><a href="more-sermons2.html" class="breadCrumbs">2</a></div>
+    <div><a href="/more-sermons2.html" class="breadCrumbs">2</a></div>
  </div>
  
   <br>
