--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+
   <title>Apostles of the Word and Prayer Worldwide</title>
   <meta name="description" content="Apostles of the Word and Prayer Worldwide - A fellowship of believers in Christ alone. Teaching, evangelism, prayer, and full demonstration of the Spirit are our focus.">
 
