--- a/nextpage.html
+++ b/nextpage.html
@@ -193,6 +193,14 @@
       <p class="sermon-meta hidden">2022</p>
       </a>
     </div>
+     
+    <div class="sermon-card">
+      <a href="template/sermons.html?id=Indwelling-of-the-father">
+        <img src="images/Indwelling-of-the-father.jpg" alt="The Indwelling of The Father" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">The Indwelling of The Father</h3>
+      <p class="sermon-meta hidden">2020</p>
+      </a>
+    </div>
     
 
   </div>
