--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
       </a>
     </div>
      
-    <div class="sermon-card">
+    <div class="sermon-card hidden">
       <a href="template/sermons.html?id=gods-wrath">
         <img src="images/godsWrath.jpg" alt="Explaining God's Wrath" loading="lazy" width="100%">
         <h3 class="sermon-title hidden">Explaining God's Wrath</h3>
@@ -550,6 +550,14 @@
       <p class="sermon-meta hidden"></p>
       </a>
      </div>
+
+     <div class="sermon-card hidden">
+      <a href="template/sermons.html?id=Indwelling-of-the-father">
+        <img src="images/Indwelling-of-the-father.jpg" alt="The Indwelling of The Father" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">The Indwelling of The Father</h3>
+      <p class="sermon-meta hidden">2020</p>
+      </a>
+    </div>
 
      <div class="sermon-card hidden">
       <a href="template/sermons.html?id=mystery-angels-demons-two">
