--- a/nextpage.html
+++ b/nextpage.html
@@ -193,6 +193,14 @@
       <p class="sermon-meta hidden">2022</p>
       </a>
     </div>
+
+     <div class="sermon-card">
+      <a href="template/sermons.html?id=gods-wrath">
+        <img src="images/godsWrath.jpg" alt="Explaining God's Wrath" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">Explaining God's Wrath</h3>
+      <p class="sermon-meta hidden">2023</p>
+      </a>
+    </div>
      
     <div class="sermon-card">
       <a href="template/sermons.html?id=Indwelling-of-the-father">
