--- a/index.html
+++ b/index.html
@@ -446,6 +446,14 @@
       <p class="sermon-meta hidden">2023</p>
       </a>
     </div>
+
+     <div class="sermon-card hidden">
+      <a href="template/sermons.html?id=if-i-sin">
+        <img src="images/if-I-sin.jpg" alt="If I Sin What Happens?" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">If I Sin What Happens?</h3>
+      <p class="sermon-meta hidden">2025</p>
+      </a>
+    </div>
      
     <div class="sermon-card hidden">
       <a href="template/sermons.html?id=gods-wrath">
