--- a/index.html
+++ b/index.html
@@ -573,6 +573,22 @@
         <h3 class="sermon-title hidden">Unveiling the mystery on Angels & Demons</h3>
       <p class="sermon-meta hidden">2022</p>
      </div>
+
+     <div class="sermon-card hidden">
+      <a href="template/sermons.html?id=gist-on-grace">
+        <img src="images/gistOnGrace.jpg" alt="Little Gist On Grace" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">Little Gist On Grace</h3>
+      <p class="sermon-meta hidden"></p>
+      </a>
+    </div>
+     
+    <div class="sermon-card hidden">
+      <a href="template/sermons.html?id=gist-about-laws">
+        <img src="images/gistOnLaws.jpg" alt="Little Gist About Laws" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">Little Gist About Laws</h3>
+      <p class="sermon-meta hidden">2025</p>
+      </a>
+    </div>
 </main>
 
  <div class="breadCrumbs-nav">
