--- a/nextpage.html
+++ b/nextpage.html
@@ -233,6 +233,14 @@
       <p class="sermon-meta hidden">2025</p>
       </a>
     </div>
+     
+    <div class="sermon-card">
+      <a href="template/sermons.html?id=giving">
+        <img src="images/giving.jpg" alt="Giving (Explanations from the lenses of Christ)" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">Giving (Explanations from the lenses of Christ)</h3>
+      <p class="sermon-meta hidden">2025</p>
+      </a>
+    </div>
     
 
   </div>
