--- a/index.html
+++ b/index.html
@@ -568,6 +568,14 @@
     </div>
 
      <div class="sermon-card hidden">
+      <a href="template/sermons.html?id=giving">
+        <img src="images/giving.jpg" alt="Giving (Explanations from the lenses of Christ)" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">Giving (Explanations from the lenses of Christ)</h3>
+      <p class="sermon-meta hidden">2025</p>
+      </a>
+    </div>
+
+     <div class="sermon-card hidden">
       <a href="template/sermons.html?id=mystery-angels-demons-two">
         <img src="images/angelsDemons2.jpg" alt="Unveiling the mystery on Angels & Demons - series 2" loading="lazy" width="100%">
         <h3 class="sermon-title hidden">Unveiling the mystery on Angels & Demons</h3>
