--- a/nextpage.html
+++ b/nextpage.html
@@ -241,6 +241,14 @@
       <p class="sermon-meta hidden">2025</p>
       </a>
     </div>
+     
+    <div class="sermon-card">
+      <a href="template/sermons.html?id=the-communion">
+        <img src="images/the-communion.jpg" alt="The Communion" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">The Communion</h3>
+      <p class="sermon-meta hidden">2025</p>
+      </a>
+    </div>
     
 
   </div>
