--- a/nextpage.html
+++ b/nextpage.html
@@ -249,6 +249,14 @@
       <p class="sermon-meta hidden">2025</p>
       </a>
     </div>
+     
+    <div class="sermon-card">
+      <a href="template/sermons.html?id=parable-of-the-sower">
+        <img src="images/parable-of-the-sower.jpg" alt="Parable of the Sower" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">Parable of the Sower</h3>
+      <p class="sermon-meta hidden">2025</p>
+      </a>
+    </div>
     
 
   </div>
