--- a/index.html
+++ b/index.html
@@ -597,6 +597,22 @@
       <p class="sermon-meta hidden">2025</p>
       </a>
     </div>
+
+     <div class="sermon-card hidden">
+      <a href="template/sermons.html?id=the-communion">
+        <img src="images/the-communion.jpg" alt="The Communion" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">The Communion</h3>
+      <p class="sermon-meta hidden">2025</p>
+      </a>
+    </div>
+     
+    <div class="sermon-card hidden">
+      <a href="template/sermons.html?id=parable-of-the-sower">
+        <img src="images/parable-of-the-sower.jpg" alt="Parable of the Sower" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">Parable of the Sower</h3>
+      <p class="sermon-meta hidden">2025</p>
+      </a>
+    </div>
 </main>
 
  <div class="breadCrumbs-nav">
