--- a/index.html
+++ b/index.html
@@ -613,6 +613,14 @@
       <p class="sermon-meta hidden">2025</p>
       </a>
     </div>
+     
+    <div class="sermon-card hidden">
+      <a href="template/sermons.html?id=labouring-man">
+        <img src="images/labouring-man.jpg" alt="The Labouring Man" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">The Labouring Man</h3>
+      <p class="sermon-meta hidden">2022</p>
+      </a>
+    </div>
 </main>
 
  <div class="breadCrumbs-nav">
