--- a/discipleship.html
+++ b/discipleship.html
@@ -155,6 +155,14 @@
       </a>
     </div>
 
+     <div class="sermon-card">
+      <a href="template/sermons.html?id=labouring-man">
+        <img src="images/labouring-man.jpg" alt="The Labouring Man" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">The Labouring Man</h3>
+      <p class="sermon-meta hidden">2022</p>
+      </a>
+    </div>
+
   </div>
 </main>
  
