--- a/nextpage.html
+++ b/nextpage.html
@@ -257,6 +257,14 @@
       <p class="sermon-meta hidden">2025</p>
       </a>
     </div>
+     
+    <div class="sermon-card">
+      <a href="template/sermons.html?id=major-assignment">
+        <img src="images/major-assignment.jpg" alt="My Major Assignment" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">My Major Assignment (Seeing Clearly The Believer's Purpose)</h3>
+      <p class="sermon-meta hidden">2025</p>
+      </a>
+    </div>
     
 
   </div>
