--- a/index.html
+++ b/index.html
@@ -629,6 +629,14 @@
       <p class="sermon-meta hidden">2025</p>
       </a>
     </div>
+
+     <div class="sermon-card hidden">
+      <a href="template/sermons.html?id=is-jesus-god">
+        <img src="images/is-jesus-god.jpg" alt="Is Jesus God?" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">Is Jesus God?</h3>
+      <p class="sermon-meta hidden">2025</p>
+      </a>
+    </div>
 </main>
 
  <div class="breadCrumbs-nav">
