--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
     
     <div class="sermon-card hidden">
       <a href="template/sermons.html?id=">
-        <img src="images/reconcile.jpg" alt="Reconciliation" loading="lazy" width="100%">
+        <img src="images/Reconciliation.jpg" alt="Reconciliation" loading="lazy" width="100%">
         <h3 class="sermon-title hidden">Reconciliation</h3>
       <p class="sermon-meta hidden"></p>
       </a>
