--- a/nextpage.html
+++ b/nextpage.html
@@ -273,6 +273,14 @@
       <p class="sermon-meta hidden">2025</p>
       </a>
     </div>
+
+     <div class="sermon-card">
+      <a href="template/sermons.html?id=reconciliation">
+        <img src="images/Reconciliation.jpg" alt="Reconciliation" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">Reconciliation</h3>
+      <p class="sermon-meta hidden"></p>
+      </a>
+    </div>
     
 
   </div>
