--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
     </div>
     
     <div class="sermon-card hidden">
-      <a href="template/sermons.html?id=">
+      <a href="template/sermons.html?id=reconciliation">
         <img src="images/Reconciliation.jpg" alt="Reconciliation" loading="lazy" width="100%">
         <h3 class="sermon-title hidden">Reconciliation</h3>
       <p class="sermon-meta hidden"></p>
