--- a/nextpage.html
+++ b/nextpage.html
@@ -278,9 +278,17 @@
       <a href="template/sermons.html?id=reconciliation">
         <img src="images/Reconciliation.jpg" alt="Reconciliation" loading="lazy" width="100%">
         <h3 class="sermon-title hidden">Reconciliation</h3>
-      <p class="sermon-meta hidden"></p>
+      <p class="sermon-meta hidden">2023</p>
       </a>
     </div>
+     
+   <div class="sermon-card">
+      <a href="template/sermons.html?id=sorcery">
+        <img src="images/sorcery.jpg" alt="Sorcery And The Believer In Christ" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">Sorcery And The Believer In Christ</h3>
+      <p class="sermon-meta hidden">2021</p>
+      </a>
+   </div>
     
 
   </div>
