--- a/discipleship.html
+++ b/discipleship.html
@@ -162,6 +162,22 @@
       <p class="sermon-meta hidden">2022</p>
       </a>
     </div>
+     
+     <div class="sermon-card">
+      <a href="template/sermons.html?id=help-church-grow">
+        <img src="images/help-church-grow.jpg" alt="How To Help Your Church Grow" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">How To Help Your Church Grow</h3>
+      <p class="sermon-meta hidden">2024</p>
+      </a>
+    </div>
+     
+     <div class="sermon-card">
+      <a href="template/sermons.html?id=control-your-tongue">
+        <img src="images/control-your-tongue.jpg" alt="Control Your Tongue" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">Control Your Tongue</h3>
+      <p class="sermon-meta hidden">2024</p>
+      </a>
+    </div>
 
   </div>
 </main>
