--- a/nextpage.html
+++ b/nextpage.html
@@ -345,6 +345,14 @@
       <p class="sermon-meta hidden">2024</p>
       </a>
    </div>
+     
+   <div class="sermon-card">
+      <a href="template/sermons.html?id=let-the-fire-burn">
+        <img src="images/let-the-fire-burn.jpg" alt="Let The Fire Burn" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">Let The Fire Burn</h3>
+      <p class="sermon-meta hidden">2025</p>
+      </a>
+   </div>
     
 
   </div>
