--- a/nextpage.html
+++ b/nextpage.html
@@ -353,6 +353,14 @@
       <p class="sermon-meta hidden">2025</p>
       </a>
    </div>
+     
+   <div class="sermon-card">
+      <a href="template/sermons.html?id=gods-will-and-commandment">
+        <img src="images/gods-will-and-commandment.jpg" alt="God's Will And Commandment" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">God's Will And Commandment</h3>
+      <p class="sermon-meta hidden">2022</p>
+      </a>
+   </div>
     
 
   </div>
