--- a/nextpage.html
+++ b/nextpage.html
@@ -361,6 +361,14 @@
       <p class="sermon-meta hidden">2022</p>
       </a>
    </div>
+     
+   <div class="sermon-card">
+      <a href="template/sermons.html?id=male-female-roles">
+        <img src="images/male-female-roles.jpg" alt="Male Or Female Roles (Who Should Love More In Marriage)" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">Male Or Female Roles (Who Should Love More In Marriage)</h3>
+      <p class="sermon-meta hidden">2025</p>
+      </a>
+   </div>
     
 
   </div>
