Add sermon card for 'Use Your Mouth Right'
Added a new sermon card for 'Use Your Mouth Right'.

--- a/nextpage.html
+++ b/nextpage.html
@@ -369,7 +369,14 @@
       <p class="sermon-meta hidden">2025</p>
       </a>
    </div>
-    
+
+   <div class="sermon-card">
+      <a href="template/sermons.html?id=use-your-mouth-right">
+        <img src="images/use-your-mouth-right.jpg" alt="Use Your Mouth Right" loading="lazy" width="100%">
+        <h3 class="sermon-title hidden">Use Your Mouth Right</h3>
+      <p class="sermon-meta hidden">2025</p>
+      </a>
+   </div>
 
   </div>
 </main>
